; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_diskonchip.c_DoC_Delay.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_diskonchip.c_DoC_Delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.doc_priv = type { i32 }

@NOP = common dso_local global i32 0, align 4
@Mplus_NOP = common dso_local global i32 0, align 4
@DOCStatus = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.doc_priv*, i16)* @DoC_Delay to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DoC_Delay(%struct.doc_priv* %0, i16 zeroext %1) #0 {
  %3 = alloca %struct.doc_priv*, align 8
  %4 = alloca i16, align 2
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  store %struct.doc_priv* %0, %struct.doc_priv** %3, align 8
  store i16 %1, i16* %4, align 2
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %40, %2
  %8 = load i32, i32* %6, align 4
  %9 = load i16, i16* %4, align 2
  %10 = zext i16 %9 to i32
  %11 = icmp slt i32 %8, %10
  br i1 %11, label %12, label %43

12:                                               ; preds = %7
  %13 = load %struct.doc_priv*, %struct.doc_priv** %3, align 8
  %14 = call i64 @DoC_is_Millennium(%struct.doc_priv* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %12
  %17 = load %struct.doc_priv*, %struct.doc_priv** %3, align 8
  %18 = getelementptr inbounds %struct.doc_priv, %struct.doc_priv* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @NOP, align 4
  %21 = call signext i8 @ReadDOC(i32 %19, i32 %20)
  store volatile i8 %21, i8* %5, align 1
  br label %39

22:                                               ; preds = %12
  %23 = load %struct.doc_priv*, %struct.doc_priv** %3, align 8
  %24 = call i64 @DoC_is_MillenniumPlus(%struct.doc_priv* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %22
  %27 = load %struct.doc_priv*, %struct.doc_priv** %3, align 8
  %28 = getelementptr inbounds %struct.doc_priv, %struct.doc_priv* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @Mplus_NOP, align 4
  %31 = call signext i8 @ReadDOC(i32 %29, i32 %30)
  store volatile i8 %31, i8* %5, align 1
  br label %38

32:                                               ; preds = %22
  %33 = load %struct.doc_priv*, %struct.doc_priv** %3, align 8
  %34 = getelementptr inbounds %struct.doc_priv, %struct.doc_priv* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @DOCStatus, align 4
  %37 = call signext i8 @ReadDOC(i32 %35, i32 %36)
  store volatile i8 %37, i8* %5, align 1
  br label %38

38:                                               ; preds = %32, %26
  br label %39

39:                                               ; preds = %38, %16
  br label %40

40:                                               ; preds = %39
  %41 = load i32, i32* %6, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %6, align 4
  br label %7

43:                                               ; preds = %7
  ret void
}

declare dso_local i64 @DoC_is_Millennium(%struct.doc_priv*) #1

declare dso_local signext i8 @ReadDOC(i32, i32) #1

declare dso_local i64 @DoC_is_MillenniumPlus(%struct.doc_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
